--- a/views/partials/postPanel.handlebars
+++ b/views/partials/postPanel.handlebars
@@ -1,4 +1,4 @@
-<div class="selectedTheme colorMain">
+<div id="selectedTheme" class="colorMain">
     <a class="borderTop myButton colorDarkLink colorSection"
        style="float: left; margin-top: 4.4vh" href="{{from}}"><img src="/static/images/back.png" height="40"
                                                                    alt="Назад"></a>
