--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -24,7 +24,7 @@ form {
     margin: 0;
 }
 
-select {
+select, a {
     cursor: pointer;
 }
 
@@ -32,6 +32,8 @@ select {
 textarea {
     font-family: 'Roboto', sans-serif;
 }
+
+
 
 
 /* ПОЛОЖЕНИЕ */
@@ -175,7 +177,7 @@ textarea {
     text-align: center;
     position: relative;
     cursor: pointer;
-    transition: background .1s;
+    transition: background-color .1s;
 }
 
 
@@ -242,6 +244,8 @@ ul.menuList {
     padding: 10px 0;
     background: white;
     list-style-type: none;
+    cursor: pointer;
+    z-index: 1;
 
 }
 
@@ -336,7 +340,7 @@ ul.menuList {
     border: 8px solid white;
     background: gray;
     cursor: pointer;
-    transition: background .1s;
+    transition: background-color .1s;
 }
 
 .hideIcon:hover {
@@ -380,6 +384,13 @@ ul.menuList {
     right: -30px;
 }
 
+.postActionsList {
+    position: absolute;
+    right: 0;
+    bottom: -50px;
+    
+}
+
 #newPostPopup textarea {
     resize: vertical;
     min-height: 100px;
@@ -404,13 +415,49 @@ ul.menuList {
 }
 #editReplyPopup textarea {
     min-width: 300px;
-    min-height: 100px;
+    min-height: 10
+    0px;
+}
+
+
+#ulPosts > li {
+    border-bottom: 5px solid #eaf7f8;
+}
+
+#ulPosts > li > a {
+    text-decoration: none;
+     display: block;
+     width: 100%;
+     height: 100%;
+     color: black;
+}
+
+#ulPosts > li > a > header {
+    padding: 25px 30px 0 30px;
+}
+
+#ulPosts > li > a > .postMain {
+    padding: 0 30px;
+}
+
+#ulPosts > li > footer {
+    line-height: 40px;
+    padding: 0 30px;
+    margin-bottom: 20px;
+    
+}
+
+#ulPosts > li > footer >img {
+    margin-right: 10px;
 }
 .ulCategories {
     max-height: 70vh;
     overflow-y: auto;
 }
 
+.clearFix {
+    clear: both;
+}
 
 .replyImage {
     max-width: 70%;
@@ -525,9 +572,9 @@ ul.menuList {
 }
 
 #selectedTheme {
-    width: 55%;
+    width:45%;
     position: absolute;
-    right: 150px;
+    right: 400px;
     top: 0;
 
 }
@@ -645,19 +692,13 @@ ul.menuList {
     display: block;
 }
 
-.sortLink:visited {
-   
-}
-
-.sortLink:hover {
-    
-}
 
 .sortLink {
     font-size: 12pt;
     margin-left: 1%;
     margin-right: 1%;
     text-decoration: none;
+
 }
 
 .sortLinkArrow {
