'more' icon added

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -447,7 +447,7 @@ ul.menuList {
     
 }
 
-#ulPosts > li > footer >img {
+#ulPosts > li > footer > .left > img {
     margin-right: 10px;
 }
 .ulCategories {
