--- a/views/partials/popups/createPostPanel.handlebars
+++ b/views/partials/popups/createPostPanel.handlebars
@@ -1,6 +1,6 @@
 <div id="createPostPopup" class="popup hidden bgLight roundBorder shadowed1">
     <header>
-        <h3>Новый пост</h3>
+        <h3 class="colorDark">Новый пост</h3>
     </header>
     <div class="popupBody">
         <form method="post" action="/category/create" class="mbItems">
