--- a/views/partials/popups/editPostPanel.handlebars
+++ b/views/partials/popups/editPostPanel.handlebars
@@ -1,5 +1,7 @@
 <div id="editPostPopup" class="popup bgLight hidden roundBorder shadowed1">
-    <header><h3>Редактировать</h3></header>
+    <header>
+        <h3 class="colorDark">Редактировать</h3>
+        </header>
     <div class="popupBody">
         <form id="sendEdition" class="mbItems">
             <label for="editPost" class="block">Заголовок:</label>
