--- a/views/partials/popups/editReplyPanel.handlebars
+++ b/views/partials/popups/editReplyPanel.handlebars
@@ -1,6 +1,6 @@
 
 <div id="editReplyPopup" class="popup hidden bgLight hidden roundBorder shadowed1">
-    <header><h3>Редактировать</h3></header>
+    <header class="colorDark"><h3>Редактировать</h3></header>
     <div class="popupBody">
         <form id="sendReply" class="mbItems">
             <label for="editReply" class="block colorMedium">Ваш ответ</label>
