--- a/views/partials/popups/loginPanel.handlebars
+++ b/views/partials/popups/loginPanel.handlebars
@@ -1,6 +1,6 @@
 <div id="loginPopup" class="popup bgLight roundBorder shadowed1 hidden">
     <header>
-        <h3>Вход</h3>
+        <h3 class="colorDark">Вход</h3>
     </header>
     <div class="popupBody ">
         <form method="post" action="/login" class="textCenter mbItems">
