--- a/views/partials/popups/signupPanel.handlebars
+++ b/views/partials/popups/signupPanel.handlebars
@@ -1,6 +1,6 @@
 <div id="signupPopup" class="popup bgLight roundBorder shadowed1 hidden">
     <header>
-        <h3>Регистрация</h3>
+        <h3 class="colorDark">Регистрация</h3>
     </header>
     <div class="popupBody ">
         <form method="post" action="/signup" class="textCenter mbItems">
