change category elements, button "создать категории" has been redesigned

--- a/views/layouts/postViewLayout.handlebars
+++ b/views/layouts/postViewLayout.handlebars
@@ -11,8 +11,10 @@
 
 <div class="container relative">
     <div id="categories" class="colorMain">
-        <a class="makeCategory bigBtn accentBtn roundBorder"> Создать категорию </a>
-        <h2 style="border-bottom-style:solid;" class="colorTextDark">Категории</h2>
+        <button id="makeCategory" class="bigBtn bgAccent hoverBgSpecial roundBorder">
+            Создать категорию
+        </button>
+        <h2 class="colorTextDark">Категории</h2>
         {{>categoriesListPanel}}
     </div>
 
