--- a/views/partials/categoriesListPanel.handlebars
+++ b/views/partials/categoriesListPanel.handlebars
@@ -1,4 +1,7 @@
 <ul class="ulCategories noUlDecor noUlDefaultPadding">
+    <h style="background: white; margin-bottom: 0" class="category colorTextDark category-link">
+        Все
+    </h>
     {{#each categories}}
         <li class="category colorSectionCategory colorDarkLink">
             <a class="category-link colorTextDark"
