add category form added

--- a/views/partials/categoriesListPanel.handlebars
+++ b/views/partials/categoriesListPanel.handlebars
@@ -1,4 +1,9 @@
-<ul class="ulCategories">
+<ul class="ulCategories" style="position: relative;">
+    <button onclick="showNewCategory()">Создать категорию</button>
+    <div id="newCategory" method="POST" class="hidden">
+        <input type="text" name="newCategoryName">
+        <input type="submit">
+    </div>
     {{#each categories}}
         <li class="liCategories category colorSection colorDarkLink">
             <a class="category-link colorTextDark"
@@ -6,3 +11,7 @@
         </li>
     {{/each}}
 </ul>
+
+<script>
+    const showNewCategory = () => document.getElementById('newCategory').classList.toggle('hidden')
+</script>
