post creation route moved from category to post.js

--- a/views/partials/topbar.handlebars
+++ b/views/partials/topbar.handlebars
@@ -21,7 +21,7 @@
 </div>
 
 <div id="postCreation" class="window">
-    <form class="postCreationBox colorMain" method="post" action="/category/create">
+    <form class="postCreationBox colorMain" method="post" action="/post/create">
         <div style="display: flex; flex-direction: column; justify-content: center;">
             <div class="colorTextLight">Category</div>
             <input style="margin-top: 5%; font-size: 14pt" type="text" placeholder="Введите категорию" name="category"
