post title input added

--- a/views/partials/topbar.handlebars
+++ b/views/partials/topbar.handlebars
@@ -27,6 +27,7 @@
             <input style="margin-top: 5%; font-size: 14pt" type="text" placeholder="Введите категорию" name="category"
                    required>
         </div>
+        <input type="text" name="postTitle">
         <textarea placeholder="Создайте свой пост" name="newPost" id="myAnswer" required></textarea>
         <div class="marginButton">
             <input id="postAnswerButton" class="borderTop myButton colorDarkLink colorSection" type="image"
