change design of posts

--- a/views/partials/postPanel.handlebars
+++ b/views/partials/postPanel.handlebars
@@ -1,6 +1,6 @@
 <div class="selectedTheme colorMain">
     <a class="borderTop myButton colorDarkLink colorSection"
-       style="float: left; margin-top: 4.4vh" href="{{from}}"><img src="/static/images/back.png" height="40"
+       style="float: left; margin-top: 4.4vh; margin-left: -3vw" href="{{from}}"><img src="/static/images/back.png" height="40"
                                                                    alt="Назад"></a>
     <h3 class="postTitle colorTextDark">{{post.title}}</h3>
     <ul id="ulReplies" style="max-height: 54%;">
