post title and first reply text separated

--- a/views/partials/topbar.handlebars
+++ b/views/partials/topbar.handlebars
@@ -28,7 +28,7 @@
                    required>
         </div>
         <input type="text" name="postTitle">
-        <textarea placeholder="Создайте свой пост" name="newPost" id="myAnswer" required></textarea>
+        <textarea placeholder="Создайте свой пост" name="postText" id="myAnswer" required></textarea>
         <div class="marginButton">
             <input id="postAnswerButton" class="borderTop myButton colorDarkLink colorSection" type="image"
                    src="/static/images/send.png">
