--- a/views/partials/popups/createPostPanel.handlebars
+++ b/views/partials/popups/createPostPanel.handlebars
@@ -3,7 +3,7 @@
         <h3 class="colorDark">Новый пост</h3>
     </header>
     <div class="popupBody">
-        <form method="post" action="/category/create" class="mbItems">
+        <form method="post" action="/post/create" class="mbItems">
             <input type="text" placeholder="Категория" name="category" class="textInput roundBorder" id="createPostPopupFocus"
                    required>
             <input name="newPost" id="myAnswer" type="text" class="textInput block roundBorder" placeholder="Заголовок"
