--- a/views/partials/postsListPanel.handlebars
+++ b/views/partials/postsListPanel.handlebars
@@ -29,7 +29,7 @@
                     <div class="clearFix"></div>
                 </header>
                 <div class="postMain">
-                    <p class="colorMedium">
+                    <p class="firstReplyPreviewText colorMedium>
                         {{#if this.first_reply}}
                         {{this.first_reply.text}}
                         {{else}}
