autocomplete off for title and text inputs

--- a/views/partials/popups/createPostPanel.handlebars
+++ b/views/partials/popups/createPostPanel.handlebars
@@ -7,9 +7,9 @@
             <input type="text" placeholder="Категория" name="category" class="textInput roundBorder" id="createPostPopupFocus"
                    required>
             <input name="postTitle" id="myAnswer" type="text" class="textInput block roundBorder" placeholder="Заголовок"
-                   required>
+                   autocomplete="off" required >
             <textarea cols=75 rows="10" placeholder='Текст поста' name="postText"
-                      class="textInput roundBorder" required></textarea>
+                      autocomplete="off" class="textInput roundBorder" required></textarea>
             <div class="formErrorText colorDanger"></div>
             <input type="submit" value="Создать"
                    class="bigBtn hoverBgSpecial bgAccent roundBorder">
